--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="logo">
       <a class="wrapper" href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs.">
         <span class="c-highlight">Nick<br>Noble</span>
-        <span class="b-highlight c-white">Hire<br>Me?</span>
+        <span class="b-highlight c-white">Hire<br>Me!</span>
       </a>
     </div>
 
@@ -90,8 +90,8 @@
       </header>
 
       <div class="block text">
-        <h2 class="title">Nick Noble focuses on designing and developing great results.</h2>
-        <p class="lead">While freelancing has been a successful venture for him, he'd rather create at Work &amp; Co. That way he'd have to the opportunity to solve ever larger puzzles with the best collaborators in the world. <strong>By the way—he isn't applying anywhere else.</strong></p>
+        <h2 class="title">Nick Noble lives at the intersection of design and code.</h2>
+        <p class="lead">He wants a job at Work &amp; Co because he believes it'll give him the opportunity to create incredible solutions at scale, with the best collaborators in the world. <strong>He's not applying anywhere else.</strong></p>
 
         <a class="cta" href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs.">Set up an interview &rarr;</a>
       </div>
@@ -118,18 +118,18 @@
 
       <ol class="letter-list">
         <li>
-          <h2>I only wear as many hats as possible</h2>
-          <p>Doing one thing all the time is boring. Every part of the process you learns brings greater understanding to the rest. Design, code, content, research, testing, and constant iteration. To everyone else, these seem to be separate concepts. To me, it's all part of building a successful product. Delivering value to the right people, at the right time, in the right way.</p>
+          <h2>Boxes suck</h2>
+          <p>I can design, code both ends, write the copy, strategize a launch, and make it happen. I'm not saying I'm the best at any of these, but I'm the best (that I know) at <em>all of them put together</em>. I want a place to work where I'm encouraged to do more than one thing, leveraging the sum of the parts.</p>
         </li>
 
         <li>
-          <h2>Proof over pudding</h2>
-          <p>I like to hit the ground fast. The quicker I can create something real and palpable, the sooner I have proof it works. Anything before that is noise, theory, or conjecture. High level thought is useful to see the forest, and is easier to grok on paper, but there are a lot of trees to plant.</p>
+          <h2>10,000 feet is great if you never want to touch the ground</h2>
+          <p>High level thought is fantastic for getting other people to buy into your ideas. But when it comes time to actually build something, one needs to get concrete. I like to make decisions quickly and test rather than talk — the faster you can put something into the field, the faster you know it works.</p>
         </li>
 
         <li>
-          <h2>Precedent matters</h2>
-          <p>After a few millennia of commerce, hundreds of years of marketing, and 70 years of computing, humans have learned a thing or two about processing value. Even if you're dealing with something brand new, it's possible the solution to the problem exists in the past. It just needs to be translated. Then again, there's no use putting wheels on a hovercraft, just because you have them laying around.</p>
+          <h2>The right tool for the job</h2>
+          <p>Humans have been processing value for a long time. In software, we get to make things that have never been done before— but it's possible an analogous solution still exists in the past. It just needs to be translated. On the other hand, there's no use putting wheels on a hovercraft, just because we have them laying around.</p>
         </li>
 
         <li>
@@ -151,22 +151,22 @@
       <ul class="grid-list">
         <li>
           <h3>HBO</h3>
-          <p>I've worked on at least four different primetime television series for them throughout the past decade, doing graphic design and on-screen interactive. I'm also the unofficial typography consultant for growing percentage of their executives.</p>
+          <p>I've worked on at least four different primetime television series for them throughout the past decade, doing graphic design and on-screen interactive. I'm also the unofficial typography consultant for a growing percentage of their executives.</p>
         </li>
 
         <li>
           <h3>Dinner Lab</h3>
-          <p>I was their first technical hire outside of the original partners. I built out a custom design system for their client facing interface and marketing pages. While the company no longer exists, in its heyday the company was active in over 30 cities across the country.</p>
+          <p>I was their first technical hire outside of the original partners. I created a custom design system for their client facing interface and marketing pages. While the company no longer exists, in its heyday it was active in over 30 cities across the country.</p>
         </li>
 
         <li>
           <h3>nclud</h3>
-          <p>As a Front End Developer, I worked on projects for Tesla Motors, George Washington University, Wingate Hughes Architecture, and General Assembly, among many others. Collaborating with some amazing peers, I was also the catalyst behind their latest rebrand.</p>
+          <p>As a Front End Developer, I worked on projects for Tesla Motors, George Washington University, Wingate Hughes Architecture, and General Assembly, among many others. Collaborating with some amazing peers, through an internal talk I was also the catalyst behind their latest rebrand.</p>
         </li>
 
         <li>
           <h3>Agora</h3>
-          <p>I was hired as a front end developer for their largest property, Stansberry &amp; Associates. I refactored a legacy (read: horrifying) codebase and built two new design systems, but my crowning achievement was a small improvement to an onboarding form that resulted in an additional ~$200,000 in revenue, practically overnight.</p>
+          <p>I was hired as a front end developer for their largest property, Stansberry &amp; Associates. I refactored a legacy (read: horrifying) codebase and created two new design systems. My crowning achievement here was a small improvement to an onboarding form that resulted in an additional ~$200,000 in revenue, practically overnight.</p>
         </li>
 
         <li>
@@ -180,7 +180,7 @@
         </li>
       </ul>
 
-      <h4>Everyone I've ever worked with:</h4>
+      <h4>Full list</h4>
       <ul class="comma-list">
         <li>1912 Center</li>
         <li>Agora, Inc</li>
@@ -253,7 +253,8 @@
           </a>
           <figcaption>
             <h2 class="c-black">PDK Poll</h2>
-            <p>This is a description</p>
+            <p>The PDK Poll is an annual poll of the public's opinions on public schooling, which PDK has been producing for 50 years. This site was an organizational shift from Wordpress to Craft CMS, which took buy in from multiple levels. They are now moving many of their other properties over.</p>
+            <p>More importantly, the redesign represents a (year over year) 37% increase in pages viewed per session, and a 29% decrease in bounce rate.</p>
           </figcaption>
         </figure>
 
@@ -263,7 +264,8 @@
           </a>
           <figcaption>
             <h2 class="c-black">DJ Coolhand</h2>
-            <p>This is a description</p>
+            <p>Full disclosure, DJ Coolhand is my old roommate and his site uses Squarespace.</p>
+            <p>While I did design a lot of this site, I also reorganized nearly 20 pages of content into just two. That, along with some social proof, clearer calls to action, and a little A/B testing, and I was able to increase his conversion rate from 1.84% to a whopping 83.34% (data from the past 6 months).</p>
           </figcaption>
         </figure>
 
@@ -273,7 +275,8 @@
           </a>
           <figcaption>
             <h2 class="c-black">Lnky</h2>
-            <p>This is a description</p>
+            <p>Last year I set out to learn Ruby on Rails, specifically so I could build this project. The actual build took around three weeks over the holiday break.</p> 
+            <p>While it's definitely still a work in progress, I'm very happy with the results: On the first day, it hit the front page of Product Hunt and had 150+ sign-ups. All without any other marketing.</p>
           </figcaption>
         </figure>
       </div>
@@ -294,7 +297,7 @@
       </div>
 
       <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
-      <p>Focus: Solving for the world, one detail at a time. Led a successful individual practice for over three years, excels at combining the best of design &amp; development, and once broke into This Also's website by accident. Now does amazing things at Work &amp; Co (fingers crossed!) Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+      <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
     <!-- 05 Facts -->
@@ -313,7 +316,7 @@
       <div class="block text">
         <h2>Hopefully, imitation actually is <br>the greatest form of flattery.</h2>
 
-        <p>Let's talk more about where someone like me could fit in at Work &amp; Co. I live near Prospect Park, relatively close to your DUMBO offices—so if you're interested in continuing the conversation, I'd be more than happy to come to you.</p>
+        <p>Let's continue this conversation, so I can hit the ground running.</p>
 
         <a href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs." class="cta c-white">Let's do it!</a>
       </div>
