--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
             <h2 class="c-black">PDK Poll</h2>
             <p>The PDK Poll is an annual poll of the public's opinions on public schooling, which PDK has been producing for 50 years. This site was an organizational shift from Wordpress to Craft CMS, which took buy in from multiple levels. They are now moving many of their other properties over.</p>
             <p>More importantly, the redesign represents a (year over year) 37% increase in pages viewed per session, and a 29% decrease in bounce rate.</p>
+
+            <div class="reference">
+              <div class="ref-label">Reference</div>
+              <div class="ref-name">Natasha Lesser</div>
+              <div class="ref-links">
+                <a href="tel:4103035232‬">(410)-303-5232‬</a>
+                <a href="mailto:natasha.lesser@gmail.com">natasha.lesser@gmail.com</a>
+              </div>
+            </div>
+
           </figcaption>
         </figure>
 
@@ -266,6 +276,16 @@
             <h2 class="c-black">DJ Coolhand</h2>
             <p>Full disclosure, DJ Coolhand is my old roommate and his site uses Squarespace.</p>
             <p>While I did design a lot of this site, I also reorganized nearly 20 pages of content into just two. That, along with some social proof, clearer calls to action, and a little A/B testing, and I was able to increase his conversion rate from 1.84% to a whopping 83.34% (data from the past 6 months).</p>
+
+            <div class="reference">
+              <div class="ref-label">Reference</div>
+              <div class="ref-name">Luke Joachim</div>
+              <div class="ref-links">
+                <a href="tel:‭9145233024‬">‭(914)-523-3024‬</a>
+                <a href="mailto:contact@djcoolhand.com">contact@djcoolhand.com</a>
+              </div>
+            </div>
+
           </figcaption>
         </figure>
 
@@ -277,6 +297,11 @@
             <h2 class="c-black">Lnky</h2>
             <p>Last year I set out to learn Ruby on Rails, specifically so I could build this project. The actual build took around three weeks over the holiday break.</p> 
             <p>While it's definitely still a work in progress, I'm very happy with the results: On the first day, it hit the front page of Product Hunt and had 150+ sign-ups. All without any other marketing.</p>
+
+            <div class="reference">
+              <div class="ref-label">Reference</div>
+              <div class="ref-name">No reference here, unless you'd like to speak to my cats.</div>
+            </div>
           </figcaption>
         </figure>
       </div>
