--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
         <li><a href="#clients"  ><span class="number">02</span> Client List</a></li>
         <li><a href="#cases"    ><span class="number">03</span> Case Studies</a></li>
         <li><a href="#candidate"><span class="number">04</span> Candidate</a></li>
-        <li><a href="#facts"    ><span class="number">05</span> Facts About Nick Noble</a></li>
-        <li><a href="#contact"  ><span class="number">06</span> Contact</a></li>
+        <li><a href="#contact"  ><span class="number">05</span> Contact</a></li>
       </ul>
     </section>
 
@@ -298,23 +297,16 @@
       <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
     </section>
 
-    <!-- 05 Facts -->
-    <section class="section b-highlight" id="facts">
-      <header class="section-header b-highlight">
-        <h4><span class="number c-white">05</span> Facts</h4>
-      </header>
-    </section>
-
-    <!-- 06 Contact -->
+    <!-- 05 Contact -->
     <section class="section b-black c-white" id="contact">
       <header class="section-header b-black">
-        <h4 class="c-white"><span class="number c-white">06</span> Contact</h4>
+        <h4 class="c-white"><span class="number c-white">05</span> Contact</h4>
       </header>
       
       <div class="block text">
         <h2>Hopefully, imitation actually is <br>the greatest form of flattery.</h2>
 
-        <p>Let's continue this conversation, so I can hit the ground running.</p>
+        <p>Let's continue this conversation, so I can hit the ground running.<br><em>PS:</em> This page doesn't use JavaScript<span class="c-dark">*</span>.</p>
 
         <a href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs." class="cta c-white">Let's do it!</a>
       </div>
@@ -327,6 +319,8 @@
         <dt>Twitter</dt>
         <dd><a target="_blank" rel="noopener noreferrer" href="//twitter.com/nickisnoble">@nickisnoble</a></dd>
       </dl>
+
+      <p class="c-dark"><em>* Except for analytics.</em></p>
     </section>
   </main>
 
