add more content to candidate section, bringing back references

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="block text">
         <h2 class="title">Nick Noble lives at the intersection of design and code.</h2>
-        <p class="lead">He wants a job at Work &amp; Co because he believes it'll give him the opportunity to create incredible solutions at scale, with the best collaborators in the world. <strong>He's not applying anywhere else.</strong></p>
+        <p class="lead">He wants a job at Work &amp; Co because he believes it'll give him the opportunity to create incredible solutions at scale, with the best collaborators in the world.<br><strong>He's not applying anywhere else.</strong></p>
 
         <a class="cta" href="mailto:frontdesk@nicknoble.works?subject=Let's%20talk.&body=Hey%20Nick%2C%0A%0A%20%20%20%20We%20saw%20the%20site%20you%20made%20and%20thought%20it%20was%20pretty%20%7B%7B%20adjective%20%7D%7D.%20%0A%0AWould%20you%20be%20available%20on%20either%20%7B%7B%20convenient%20date%20and%20time%20%7D%7D%20or%20%7B%7B%20alternate%20date%20and%20time%20%7D%7D%20to%20meet%20us%20%7B%7B%20at%20our%20offices%20in%20DUMBO%20%2F%2F%20for%20coffee%20%7D%7D%3F%0A%0ALooking%20forward%20to%20speaking%20further%2C%0A%0A%7B%7B%20Your%20Name%20Here%20%7D%7D%0A%0APS%3A%20I%20hope%20you%20like%20mad-libs.">Set up an interview &rarr;</a>
       </div>
@@ -118,7 +118,7 @@
       <ol class="letter-list">
         <li>
           <h2>Boxes suck</h2>
-          <p>I can design, code both ends, write the copy, strategize a launch, and make it happen. I'm not saying I'm the best at any of these, but I'm the best (that I know) at <em>all of them put together</em>. I want a place to work where I'm encouraged to do more than one thing, leveraging the sum of the parts.</p>
+          <p>I can design, code <em>both</em> ends, write the copy, strategize a launch, and make it actually happen. I'm not saying I'm the best at any of these, but I'm the best (that I know of) at <em>all of them put together</em>. I want a place to work where I'm encouraged to do more than one thing, leveraging the sum of the parts.</p>
         </li>
 
         <li>
@@ -292,9 +292,82 @@
       <div class="block">
         <h1 class="t-center">Generalist, by design</h1>
       </div>
+      
+      <div class="text">
+        <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
+        <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+      </div>
+      <div class="grid responsive">
+        <div class="grid-item">
+          <hr>
+          <h3>Skills</h3>
 
-      <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
-      <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+          <dl>
+            <dt>Languages</dt>
+            <dd>
+              <ul class="comma-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+                <li>Ruby</li>
+                <li>Elvish (yes, really)</li>
+              </ul>
+            </dd>
+
+            <dt>Software</dt>
+            <dd>
+              <ul class="comma-list">
+                <li>Adobe CC</li>
+                <li>Sketch</li>
+                <li>Sublime Text</li>
+                <li>iTerm</li>
+                <li>and learning Framer</li>
+              </ul>
+            </dd>
+
+            <dt>Other</dt>
+            <dd>
+              <ul class="comma-list">
+                <li>Hand lettering</li>
+                <li>explaining complex topics</li>
+                <li>eating dumplings</li>
+                <li>video games</li>
+              </ul>
+            </dd>
+          </dl>
+
+        </div>
+        <div class="grid-item">
+          <hr>
+          <h3>References</h3>
+          
+          <dl>
+            <dt>Natasha Lesser</dt>
+            <dd>
+              <a href="tel:4103035232‬">(410)-303-5232‬</a><br>
+              <a href="mailto:natasha.lesser@gmail.com">natasha.lesser@gmail.com</a>
+            </dd>
+
+            <dt>Luke Joachim</dt>
+            <dd>
+              <a href="tel:‭9145233024‬">‭(914)-523-3024‬</a><br>
+              <a href="mailto:contact@djcoolhand.com">contact@djcoolhand.com</a>
+            </dd>
+
+            <dt>Aaron Matys</dt>
+            <dd>
+              <a href="tel:8055010608‬">‭‭(805) 501-0608‬</a><br>
+              <a href="mailto:aaronmatys@gmail.com">aaronmatys@gmail.com</a>
+            </dd>
+          </dl>
+        </div>
+        <div class="grid-item">
+          <hr>
+          <h3>Experience</h3>
+          <dt>7 years</dt>
+          <dd>of professional design.</dd>
+        </div>
+      </div>
     </section>
 
     <!-- 05 Contact -->
@@ -323,9 +396,6 @@
       <p class="c-dark"><em>* Except for analytics.</em></p>
     </section>
   </main>
-
-  <!-- 07 Conclusion -->
-  <!-- <footer id="site-footer"></footer> -->
   
   <script type="text/javascript">
     // Other than that, there's really no other JS needed...
