add google analytics

--- a/index.html
+++ b/index.html
@@ -395,7 +395,14 @@
     </section>
   </main>
   
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114905815-1"></script>
   <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114905815-1');
+
     // Other than that, there's really no other JS needed...
     // Except, maybe....
     
