minor copy edits

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
       <div class="text c-black">
         <h1>Case studies</h1>
-        <h3>While these might not be the most visible projects, they are ones I'm proud of—for one reason or another.</h3>
+        <h3>These are a few projects I'm proud of—because of the results.</h3>
       </div>
 
       <h4>Selected projects</h4>
@@ -342,13 +342,13 @@
           <dl>
             <dt>Natasha Lesser</dt>
             <dd>
-              <a href="tel:4103035232‬">(410)-303-5232‬</a><br>
+              <a href="tel:4103035232‬">(410) 303-5232‬</a><br>
               <a href="mailto:natasha.lesser@gmail.com">natasha.lesser@gmail.com</a>
             </dd>
 
             <dt>Luke Joachim</dt>
             <dd>
-              <a href="tel:‭9145233024‬">‭(914)-523-3024‬</a><br>
+              <a href="tel:‭9145233024‬">‭(914) 523-3024‬</a><br>
               <a href="mailto:contact@djcoolhand.com">contact@djcoolhand.com</a>
             </dd>
 
@@ -386,7 +386,7 @@
         <dt>Email</dt>
         <dd><a href="mailto:frontdesk@nicknoble.works">frontdesk@nicknoble.works</a></dd>
         <dt>Telephone</dt>
-        <dd><a href="tel:4106089787">(410)-608-9787</a></dd>
+        <dd><a href="tel:4106089787">(410) 608-9787</a></dd>
         <dt>Twitter</dt>
         <dd><a target="_blank" rel="noopener noreferrer" href="//twitter.com/nickisnoble">@nickisnoble</a></dd>
       </dl>
