add github link

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <dd><a target="_blank" rel="noopener noreferrer" href="//twitter.com/nickisnoble">@nickisnoble</a></dd>
       </dl>
 
-      <p class="c-dark"><em>* Except for analytics.</em></p>
+      <p class="c-dark"><em>* Except for analytics. <a href="https://github.com/nickisnoble/workco">See the code on GitHub.</a></em></p>
     </section>
   </main>
   
