--- a/index.html
+++ b/index.html
@@ -290,11 +290,17 @@
       <div class="block">
         <h1 class="t-center">Generalist, by design</h1>
       </div>
-      
-      <div class="text">
-        <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
-        <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+
+      <hr>
+      <div class="grid center">
+
+        <div class="text bio">
+          <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
+          <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
+        </div>
+        <img src="images/nick.png" alt="" class="headshot">
       </div>
+      
       <div class="grid responsive">
         <div class="grid-item">
           <hr>
