Migrate from Gulp to Vite — Claude

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <title>Nick Noble at Work &amp; Co?</title>
 
   <link type="text/plain" rel="author" href="humans.txt" />
-  <link type="text/css" rel="stylesheet" href="styles.css" />
+  <script type="module" src="/main.js"></script>
 </head>
 <body>
 
@@ -293,7 +293,7 @@
 
       <hr>
       <div class="grid center">
-        <img src="images/nick.png" alt="" class="headshot">
+        <img src="/images/nick.png" alt="" class="headshot">
         <div class="text bio">
           <h5>Nick Noble<br><span class="c-gray">Wherever you'll put me</span></h5>
           <p>Focus: Solving the world, one detail at a time. Led a successful individual practice for over three years, taught multiple people how to code from scratch, and broke into This Also's website by accident. Past Life: Special FX make up artist then graphic artist for television aired by HBO, CBS, Fox FX, and Netflix.</p>
@@ -348,20 +348,20 @@
           <dl>
             <dt>Natasha Lesser</dt>
             <dd>
-              <a href="tel:4103035232‬">(410) 303-5232‬</a><br>
-              <a href="mailto:natasha.lesser@gmail.com">natasha.lesser@gmail.com</a>
+              <a href="tel:[REDACTED]">[REDACTED]</a><br>
+              <a href="mailto:[REDACTED]">[REDACTED]</a>
             </dd>
 
             <dt>Luke Joachim</dt>
             <dd>
-              <a href="tel:‭9145233024‬">‭(914) 523-3024‬</a><br>
-              <a href="mailto:contact@djcoolhand.com">contact@djcoolhand.com</a>
+              <a href="tel:[REDACTED]">[REDACTED]</a><br>
+              <a href="mailto:[REDACTED]">[REDACTED]</a>
             </dd>
 
             <dt>Aaron Matys</dt>
             <dd>
-              <a href="tel:8055010608‬">‭‭(805) 501-0608‬</a><br>
-              <a href="mailto:aaronmatys@gmail.com">aaronmatys@gmail.com</a>
+              <a href="tel:[REDACTED]">[REDACTED]</a><br>
+              <a href="mailto:[REDACTED]">[REDACTED]</a>
             </dd>
           </dl>
         </div>
@@ -420,7 +420,7 @@
     // Other than that, there's really no other JS needed...
     // Except, maybe....
     
-    // var number = 4106089787, IJustMetYou = "yup", thisIsCrazy = "I'd say so.", maybe = Math.round( Math.random() ); // Make this true
+    // var number = [REDACTED], IJustMetYou = "yup", thisIsCrazy = "I'd say so.", maybe = Math.round( Math.random() ); // Make this true
     // 
     // 
     // 
@@ -437,5 +437,6 @@
 
     // That should do it.
   </script>
+  <!-- Script only needed once at the end of the body -->
 </body>
 </html>
